// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a schedule 1`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": {
      "root/my_schedule": {
        "addr": "c8eac5abdbcb1c98c5525dcb3d0e38c0ccdfef4aed",
        "path": "root/my_schedule",
        "props": {
          "cronExpression": "*/1 * * * *",
        },
        "type": "@winglang/sdk.cloud.Schedule",
      },
      "root/my_schedule/Policy": {
        "addr": "c8c7f555c253f79a2cdcd8a13c6772cfd654e2bf0b",
        "path": "root/my_schedule/Policy",
        "props": {
          "principal": "\${wsim#root/my_schedule#attrs.handle}",
          "statements": [],
        },
        "type": "@winglang/sdk.sim.Policy",
      },
    },
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.Resource": {
        "className": "Resource",
        "sourcePath": "<ABSOLUTE PATH>/resource.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_schedule": {
          "children": {
            "Policy": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A simulated resource policy",
                "hidden": true,
                "title": "Policy",
              },
              "id": "Policy",
              "path": "root/my_schedule/Policy",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A cloud schedule to trigger events at regular intervals",
            "title": "Schedule",
          },
          "id": "my_schedule",
          "path": "root/my_schedule",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`schedule with one task using rate of 3h 1`] = `
{
  ".wing/ontick0_c83eddbe.cjs": ""use strict";
var $handler = undefined;
exports.handler = async function(event) {
  $handler = $handler ?? ((await (async () => {
  const $func = async (ctx) => {
            await ctx.handler();
            return undefined;
        }
  const $ctx = {
  handler: (await (async () => {
  const $func = async (_, message) => {
  console.log("Hello from schedule!");
}
  const $ctx = {
  
  };
  let newFunction = async (...args) => {
    return $func($ctx, ...args);
  };
  newFunction.handle = newFunction;
  return newFunction;
}
)())
  };
  let newFunction = async (...args) => {
    return $func($ctx, ...args);
  };
  newFunction.handle = newFunction;
  return newFunction;
}
)()));
  return await $handler.handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "onTick()",
        "source": "root/my_schedule",
        "sourceOp": "tick",
        "target": "root/my_schedule/OnTick0",
        "targetOp": "invoke",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": {
      "root/my_schedule": {
        "addr": "c8eac5abdbcb1c98c5525dcb3d0e38c0ccdfef4aed",
        "path": "root/my_schedule",
        "props": {
          "cronExpression": "* */3 * * *",
        },
        "type": "@winglang/sdk.cloud.Schedule",
      },
      "root/my_schedule/OnTick0": {
        "addr": "c83eddbe8512d15b84969a611d4b5ca9ce55e1f808",
        "path": "root/my_schedule/OnTick0",
        "policy": [],
        "props": {
          "concurrency": 100,
          "environmentVariables": {},
          "sourceCodeFile": ".wing/ontick0_c83eddbe.cjs",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      "root/my_schedule/OnTickMapping0": {
        "addr": "c863abe75f0d01961369ad52fd7212846989919eaf",
        "deps": [
          "root/my_schedule/OnTick0",
          "root/my_schedule",
        ],
        "path": "root/my_schedule/OnTickMapping0",
        "props": {
          "publisher": "\${wsim#root/my_schedule#attrs.handle}",
          "subscriber": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
          "subscriptionProps": {},
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
      "root/my_schedule/Policy": {
        "addr": "c8c7f555c253f79a2cdcd8a13c6772cfd654e2bf0b",
        "path": "root/my_schedule/Policy",
        "props": {
          "principal": "\${wsim#root/my_schedule#attrs.handle}",
          "statements": [
            {
              "operation": "invoke",
              "resourceHandle": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
            },
          ],
        },
        "type": "@winglang/sdk.sim.Policy",
      },
    },
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.Resource": {
        "className": "Resource",
        "sourcePath": "<ABSOLUTE PATH>/resource.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_schedule": {
          "children": {
            "OnTick0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "onTick()",
              },
              "id": "OnTick0",
              "path": "root/my_schedule/OnTick0",
            },
            "OnTickMapping0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "hidden": true,
              },
              "id": "OnTickMapping0",
              "path": "root/my_schedule/OnTickMapping0",
            },
            "Policy": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A simulated resource policy",
                "hidden": true,
                "title": "Policy",
              },
              "id": "Policy",
              "path": "root/my_schedule/Policy",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A cloud schedule to trigger events at regular intervals",
            "title": "Schedule",
          },
          "id": "my_schedule",
          "path": "root/my_schedule",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`schedule with one task using rate of 10m 1`] = `
{
  ".wing/ontick0_c83eddbe.cjs": ""use strict";
var $handler = undefined;
exports.handler = async function(event) {
  $handler = $handler ?? ((await (async () => {
  const $func = async (ctx) => {
            await ctx.handler();
            return undefined;
        }
  const $ctx = {
  handler: (await (async () => {
  const $func = async (_, message) => {
  console.log("Hello from schedule!");
}
  const $ctx = {
  
  };
  let newFunction = async (...args) => {
    return $func($ctx, ...args);
  };
  newFunction.handle = newFunction;
  return newFunction;
}
)())
  };
  let newFunction = async (...args) => {
    return $func($ctx, ...args);
  };
  newFunction.handle = newFunction;
  return newFunction;
}
)()));
  return await $handler.handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "onTick()",
        "source": "root/my_schedule",
        "sourceOp": "tick",
        "target": "root/my_schedule/OnTick0",
        "targetOp": "invoke",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": {
      "root/my_schedule": {
        "addr": "c8eac5abdbcb1c98c5525dcb3d0e38c0ccdfef4aed",
        "path": "root/my_schedule",
        "props": {
          "cronExpression": "*/10 * * * *",
        },
        "type": "@winglang/sdk.cloud.Schedule",
      },
      "root/my_schedule/OnTick0": {
        "addr": "c83eddbe8512d15b84969a611d4b5ca9ce55e1f808",
        "path": "root/my_schedule/OnTick0",
        "policy": [],
        "props": {
          "concurrency": 100,
          "environmentVariables": {},
          "sourceCodeFile": ".wing/ontick0_c83eddbe.cjs",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      "root/my_schedule/OnTickMapping0": {
        "addr": "c863abe75f0d01961369ad52fd7212846989919eaf",
        "deps": [
          "root/my_schedule/OnTick0",
          "root/my_schedule",
        ],
        "path": "root/my_schedule/OnTickMapping0",
        "props": {
          "publisher": "\${wsim#root/my_schedule#attrs.handle}",
          "subscriber": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
          "subscriptionProps": {},
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
      "root/my_schedule/Policy": {
        "addr": "c8c7f555c253f79a2cdcd8a13c6772cfd654e2bf0b",
        "path": "root/my_schedule/Policy",
        "props": {
          "principal": "\${wsim#root/my_schedule#attrs.handle}",
          "statements": [
            {
              "operation": "invoke",
              "resourceHandle": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
            },
          ],
        },
        "type": "@winglang/sdk.sim.Policy",
      },
    },
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.Resource": {
        "className": "Resource",
        "sourcePath": "<ABSOLUTE PATH>/resource.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_schedule": {
          "children": {
            "OnTick0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "onTick()",
              },
              "id": "OnTick0",
              "path": "root/my_schedule/OnTick0",
            },
            "OnTickMapping0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "hidden": true,
              },
              "id": "OnTickMapping0",
              "path": "root/my_schedule/OnTickMapping0",
            },
            "Policy": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A simulated resource policy",
                "hidden": true,
                "title": "Policy",
              },
              "id": "Policy",
              "path": "root/my_schedule/Policy",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A cloud schedule to trigger events at regular intervals",
            "title": "Schedule",
          },
          "id": "my_schedule",
          "path": "root/my_schedule",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`schedule with one task with cron 1`] = `
{
  ".wing/ontick0_c83eddbe.cjs": ""use strict";
var $handler = undefined;
exports.handler = async function(event) {
  $handler = $handler ?? ((await (async () => {
  const $func = async (ctx) => {
            await ctx.handler();
            return undefined;
        }
  const $ctx = {
  handler: (await (async () => {
  const $func = async (_, message) => {
  console.log("Hello from schedule!");
}
  const $ctx = {
  
  };
  let newFunction = async (...args) => {
    return $func($ctx, ...args);
  };
  newFunction.handle = newFunction;
  return newFunction;
}
)())
  };
  let newFunction = async (...args) => {
    return $func($ctx, ...args);
  };
  newFunction.handle = newFunction;
  return newFunction;
}
)()));
  return await $handler.handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "onTick()",
        "source": "root/my_schedule",
        "sourceOp": "tick",
        "target": "root/my_schedule/OnTick0",
        "targetOp": "invoke",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": {
      "root/my_schedule": {
        "addr": "c8eac5abdbcb1c98c5525dcb3d0e38c0ccdfef4aed",
        "path": "root/my_schedule",
        "props": {
          "cronExpression": "* * * * *",
        },
        "type": "@winglang/sdk.cloud.Schedule",
      },
      "root/my_schedule/OnTick0": {
        "addr": "c83eddbe8512d15b84969a611d4b5ca9ce55e1f808",
        "path": "root/my_schedule/OnTick0",
        "policy": [],
        "props": {
          "concurrency": 100,
          "environmentVariables": {},
          "sourceCodeFile": ".wing/ontick0_c83eddbe.cjs",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      "root/my_schedule/OnTickMapping0": {
        "addr": "c863abe75f0d01961369ad52fd7212846989919eaf",
        "deps": [
          "root/my_schedule/OnTick0",
          "root/my_schedule",
        ],
        "path": "root/my_schedule/OnTickMapping0",
        "props": {
          "publisher": "\${wsim#root/my_schedule#attrs.handle}",
          "subscriber": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
          "subscriptionProps": {},
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
      "root/my_schedule/Policy": {
        "addr": "c8c7f555c253f79a2cdcd8a13c6772cfd654e2bf0b",
        "path": "root/my_schedule/Policy",
        "props": {
          "principal": "\${wsim#root/my_schedule#attrs.handle}",
          "statements": [
            {
              "operation": "invoke",
              "resourceHandle": "\${wsim#root/my_schedule/OnTick0#attrs.handle}",
            },
          ],
        },
        "type": "@winglang/sdk.sim.Policy",
      },
    },
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.Resource": {
        "className": "Resource",
        "sourcePath": "<ABSOLUTE PATH>/resource.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_schedule": {
          "children": {
            "OnTick0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "onTick()",
              },
              "id": "OnTick0",
              "path": "root/my_schedule/OnTick0",
            },
            "OnTickMapping0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "hidden": true,
              },
              "id": "OnTickMapping0",
              "path": "root/my_schedule/OnTickMapping0",
            },
            "Policy": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A simulated resource policy",
                "hidden": true,
                "title": "Policy",
              },
              "id": "Policy",
              "path": "root/my_schedule/Policy",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A cloud schedule to trigger events at regular intervals",
            "title": "Schedule",
          },
          "id": "my_schedule",
          "path": "root/my_schedule",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
